--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,9 +34,18 @@ jobs:
               name: Push Master to Production
               command: |
                 git push https://github.com/lighthouse-labs/scheduler.git master:production
-                
+
 workflows:
   version: 2
-  test:
+  test_and_deploy:
     jobs:
-      - build
+      - build:
+          filters:
+            branches:
+              ignore: production
+      - deploy:
+          filters:
+            branches:
+              ignore: production
+          requires:
+            - build
